package com.example.Spring_Boot_Jpa_ER._03_1_to_1_unidir_spk_pkjc.entity;

import jakarta.persistence.*;
import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;

@NoArgsConstructor
@AllArgsConstructor
@Setter
@Getter
@Entity(name = "residences")
public class Residence {
    @Id
    // GenerationType.IDENTITY relies on IdentityGenerator,
    // which expects values generated by the identity column in the database.
    // These values are automatically incremented.
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    @Column(name = "id")
    private Long id;
    @Column(name = "city")
    private String city;
    @Column(name = "street")
    private String street;
    @Column(name = "building")
    private String building;
    @Column(name = "apartment")
    private String apartment;
}
